# RaveOS-PKGBUILD

./: README.md
linux-raveos/: .SRCINFO  PKGBUILD  config
raveos-app-installer/: PKGBUILD  app-list.json  raveos-app-installer  raveos-app-installer.desktop  raveos-app-installer.py
raveos-calamares/: 0001-support-yay.patch  0002-limit-translations.patch  PKGBUILD
raveos-calamares-module/: CMakeLists.txt  PKGBUILD  README.md  wifi.desc
raveos-calamares-module/desktopselect/: CMakeLists.txt  DesktopBackend.cpp  DesktopBackend.h  DesktopSelectViewStep.cpp  DesktopSelectViewStep.h  desktopselect.conf  module.desc
raveos-calamares-module/desktopselect/ui/: desktopselect.qml  qmldir
raveos-calamares-module/welcome/: CMakeLists.txt  RaveWelcomeViewStep.cpp  RaveWelcomeViewStep.h
raveos-calamares-module/wifi/: CMakeLists.txt  NetworkManager.cpp  NetworkManager.h  WifiViewStep.cpp  WifiViewStep.h
raveos-calamares-module/wifi/ui/: Style.qml  Translations.qml  qmldir  wifi.qml
raveos-calamares-theme/: PKGBUILD  raveos-calamares-theme-2.0.0-27-any.pkg.tar.zst.sig
raveos-cosmic-theme/: PKGBUILD  raveos-cosmic-apply.sh  raveos-cosmic-theme.install
raveos-gnome-theme/: PKGBUILD  raveos-gnome-apply.sh  raveos-gnome-theme-apply.service  raveos-gnome-theme.install
raveos-hyprland-theme/: PKGBUILD  metadata.json  raveos-hyprland-apply.sh  raveos-hyprland-session-init.service  raveos-hyprland-session-init.sh  raveos-hyprland-theme.install  raveos-session-init.sh
raveos-keyring/: PKGBUILD  raveos-keyring.install  raveos-trusted  raveos.gpg  raveos.gpg~
raveos-plasma-theme/: .SRCINFO  PKGBUILD  raveos-plasma-apply.sh  raveos-plasma-first-login.desktop  raveos-plasma-first-login.sh  raveos-plasma-theme-apply.service  raveos-plasma-theme.install
raveos-plymouth-theme/: PKGBUILD  (+1 more)
raveos-sddm-theme/: PKGBUILD  (+1 more)
(+745 files in other folders)
